--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -9,7 +9,7 @@ dependencies:
     sdk: flutter
   flutter_material_pickers:
     path: ../
-  dynamic_theme: ^1.0.0,
+  dynamic_theme: ^1.0.0
   intl: ^0.16.0
 
 flutter:
