--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: flutter_material_pickers
-description: A flutter package for showing material themed picker dialogs. This suite provides a set of new commonly used pickers and wraps some pre-existing ones into a consistent display paradigm.
-version: 1.2.0
+description: A flutter package for easily and consistently showing material themed picker dialogs.
+version: 1.3.0
 homepage: https://github.com/codegrue/flutter_material_pickers
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_colorpicker: ^0.2.6
+  flutter_colorpicker: ^0.3.3
   intl: ^0.16.0
   meta: ^1.1.6
 
