--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: flutter_material_pickers
 description: A flutter package for easily and consistently showing material themed picker dialogs.
-version: 1.4.0+1
+version: 1.5.0
 homepage: https://github.com/codegrue/flutter_material_pickers
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_colorpicker: ^0.3.3
+  flutter_colorpicker: ^0.3.4
   intl: ^0.16.0
   meta: ^1.1.6
 
