--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_material_pickers
 description: A flutter package for easily and consistently showing material themed picker dialogs.
-version: 1.6.0
+version: 1.7.0
 homepage: https://github.com/codegrue/flutter_material_pickers
 
 dependencies:
@@ -9,7 +9,8 @@ dependencies:
   flutter_colorpicker: ^0.3.4
   intl: ^0.16.0
   meta: ^1.1.8
-  file_picker_cross: ^2.1.0
+  file_picker: ^1.12.0
+  file_picker_web: ^1.0.1
 
 dev_dependencies:
   flutter_test:
