--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,8 @@ dependencies:
   flutter_colorpicker: ^0.3.4
   intl: ^0.16.0
   meta: ^1.1.8
-  file_picker: ^1.13.0
-  file_picker_web: ^1.0.1
+  file_picker: ^1.13.3
+  file_picker_web: ^1.0.2+1
 
 dev_dependencies:
   flutter_test:
