--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,12 +2,13 @@ name: flutter_material_pickers
 description: A flutter package for easily and consistently showing material themed picker dialogs.
 version: 1.9.0
 homepage: https://github.com/codegrue/flutter_material_pickers
+issue_tracker: https://github.com/codegrue/flutter_material_pickers/issues
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_colorpicker: ^0.3.5
-  intl: ^0.17.0
+  intl: ^0.16.1
   meta: ^1.1.8
   file_picker: ^2.1.5
 
