--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   flutter_material_pickers:
     path: ../
   dynamic_theme: ^1.0.0
-  intl: ^0.16.0
+  intl: ^0.17.0-nullsafety.2
 
 flutter:
   uses-material-design: true
