--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_material_pickers
 description: A flutter package for easily and consistently showing material themed picker dialogs.
-version: 1.9.1
+version: 1.9.2
 homepage: https://github.com/codegrue/flutter_material_pickers
 issue_tracker: https://github.com/codegrue/flutter_material_pickers/issues
 
@@ -8,7 +8,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_colorpicker: ^0.3.5
-  intl: ^0.16.1
+  intl: ">=0.16.0 <=0.17.0-nullsafety.2"
   meta: ^1.1.8
   file_picker: ^2.1.5
 
