--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,7 +4,7 @@ version: 1.0.0+1
 publish_to: none
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -14,7 +14,7 @@ dependencies:
   flutter_material_pickers:
     path: ../
   dynamic_theme: ^1.0.0
-  intl: ^0.17.0-nullsafety.2
+  intl: ^0.17.0
 
 flutter:
   uses-material-design: true
