--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
   flutter_material_pickers:
     path: ../
-  dynamic_theme: ^1.0.0
+  adaptive_theme: ^2.0.0-nullsafety.1
   intl: ^0.17.0
 
 flutter:
