--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,13 @@
 name: flutter_material_pickers
 description: A flutter package for easily and consistently showing material themed picker dialogs.
-version: 1.9.2
+version: 2.0.0
 homepage: https://github.com/codegrue/flutter_material_pickers
 issue_tracker: https://github.com/codegrue/flutter_material_pickers/issues
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_colorpicker: ^0.4.0-nullsafety.0
+  flutter_colorpicker: ">=0.4.0-nullsafety.0 <=0.5.0"
   intl: ^0.17.0
   file_picker: ^3.0.0
 
@@ -16,7 +16,7 @@ dev_dependencies:
     sdk: flutter
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 flutter:
   uses-material-design: true
