--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ issue_tracker: https://github.com/codegrue/flutter_material_pickers/issues
 dependencies:
   flutter:
     sdk: flutter
-  flutter_colorpicker: ">=0.4.0-nullsafety.0 <=0.5.0"
+  flutter_colorpicker: ^0.4.0
   intl: ^0.17.0
   file_picker: ^3.0.0
 
