--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,6 @@
 .classpath
 .project
 .settings/
-.vscode/
 
 ### Flutter repo-specific
 /bin/cache/
@@ -118,11 +117,11 @@ app.*.symbols
 !/dev/ci/**/Gemfile.lock
 
 ### VisualStudioCode template
-#.vscode/*
-#!.vscode/settings.json
-#!.vscode/tasks.json
-#!.vscode/launch.json
-#!.vscode/extensions.json
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 *.code-workspace
 
 # Local History for Visual Studio Code
