--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -13,12 +13,13 @@ dependencies:
     sdk: flutter
   flutter_material_pickers:
     path: ../
-  adaptive_theme: ^2.2.0
+  adaptive_theme: ^2.3.1
   intl: ^0.17.0
 
 flutter:
   uses-material-design: true
 
 dev_dependencies:
+  flutter_lints: ^1.0.4
   flutter_test:
     sdk: flutter
