--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,7 +4,7 @@ version: 1.0.0+1
 publish_to: none
 
 environment:
-  sdk: ">=2.12.0 <4.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
@@ -13,13 +13,14 @@ dependencies:
     sdk: flutter
   flutter_material_pickers:
     path: ../
-  adaptive_theme: ^2.3.1
+  adaptive_theme: ^3.6.0
   intl: ^0.19.0
+  file_picker: ^8.1.5
 
 flutter:
   uses-material-design: true
 
 dev_dependencies:
-  flutter_lints: ^1.0.4
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
